# devncode

./: Gemfile  _config.yml  config.toml  gatsby-config.js  generate.py  netlify.toml  package-lock.json  package.json  pyproject.toml
_posts/: 2019-12-09-flat-and-flatmap.md  2019-12-09-welcome-to-jekyll.markdown  2020-05-29-raspberry-time-machine.md
admin/: config.yml
content/post/2019-12-09-flat-and-flatmap/: index.md
content/post/2021-02-26---Montare-share-di-rete-con-systemd/: index.md
content/post/2024-10-14-rust-smart-pointers/: index.md
src/assets/scss/base/: _generic.scss
src/components/Links/: index.jsx
src/pages/articles/: 2019-12-09-flat-and-flatmap.md
src/pages/articles/2021-02-26---Montare-share-di-rete-con-systemd/: index.md
src/pages/pages/2015-05-01---about/: index.md
src/pages/pages/2015-05-01---contact/: index.md
